Hardcoded categories response

--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -1,6 +1,6 @@
 ua:
   categories:
-    scientific_premises: 'Навчальні приіщення'
+    scientific_premises: 'Навчальні приміщення'
     service_premises: 'Службові приміщення'
     general_use_premises: 'Приміщення загального користування'
     conference_rooms: 'Конференц-зали'
